fix java fx  version